[f76b1174025184ee3f75b16cc55b26d6f6165fb8]: Fix Recursos, PUT

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -1550,9 +1550,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 </span><span class="p">]</span><span class="w">
 </span></code></pre></div></div>
 
-<h4 id="put-1">PUT</h4>
-
-<p><strong>Alterar um item em um pedido</strong></p>
+<h4 id="put-alterar-um-item-em-um-pedido">PUT <strong>Alterar um item em um pedido</strong></h4>
 
 <p>Esse recurso permite alterar informações de um item de um pedido. O id do pedido e o id_item são utilizados para realizar a chamada.</p>
 
