[3f62fce0380536c89bc851f46435096d014d9601]: Fix Recursos, menu lateral

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -920,9 +920,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 
 <h3 id="recursos">Recursos</h3>
 
-<h4 id="post">POST</h4>
-
-<p><strong>Criar um pedido</strong></p>
+<h4 id="post---criar-um-pedido">POST - Criar um pedido</h4>
 
 <p>Esse recurso realiza a criação de um pedido no servidor do Order Manager.</p>
 
@@ -1020,9 +1018,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
 
-<h4 id="get">GET</h4>
-
-<p><strong>Consultar pedido</strong></p>
+<h4 id="get---consultar-pedido">GET - Consultar pedido</h4>
 
 <p>Esse recurso é utilizado para obter informações sobre um pedido específico. O id do pedido é utilizado para realizar a chamada.</p>
 
@@ -1130,9 +1126,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
 
-<h4 id="get-1">GET</h4>
-
-<p><strong>Consultar todos os Pedidos</strong></p>
+<h4 id="get---consultar-todos-os-pedidos">GET - Consultar todos os Pedidos</h4>
 
 <p>Esse recurso é utilizado para obter a lista e as informações de todos os pedidos cadastrados no Order Manager.</p>
 
@@ -1239,9 +1233,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
 
-<h4 id="put">PUT</h4>
-
-<p><strong>Alterar status de um pedido</strong></p>
+<h4 id="put--alterar-status-de-um-pedido">PUT- Alterar status de um pedido</h4>
 
 <p>Esse recurso realiza a alteração do status de um pedido criado. O id do pedido é utilizado para realizar a chamada.</p>
 
@@ -1329,9 +1321,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 
 <p>O retorno 200 dessa operação representa sucesso na requisição.</p>
 
-<h4 id="delete">DELETE</h4>
-
-<p><strong>Excluir um pedido</strong></p>
+<h4 id="delete---excluir-um-pedido">DELETE - Excluir um pedido</h4>
 
 <p>Esse recurso é utilizado para excluir um pedido do servidor do Order Manager. O id do pedido é utilizado para realizar a chamada.</p>
 
@@ -1398,9 +1388,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 
 <p>O retorno 200 dessa operação representa sucesso na requisição.</p>
 
-<h4 id="post-1">POST</h4>
-
-<p><strong>Adicionar Item/Itens em um Pedido</strong></p>
+<h4 id="post---adicionar-itemitens-em-um-pedido">POST - Adicionar Item/Itens em um Pedido</h4>
 
 <p>Esse recurso é utilizado para adicionar um ou mais itens em um pedido já criado. O id do pedido é utilizado para realizar a chamada.</p>
 
@@ -1471,9 +1459,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 
 <p>O retorno 200 dessa operação representa sucesso na requisição.</p>
 
-<h4 id="get-2">GET</h4>
-
-<p><strong>Consultar os itens de um pedido</strong></p>
+<h4 id="get---consultar-os-itens-de-um-pedido">GET - Consultar os itens de um pedido</h4>
 
 <p>Esse recurso é utilizado para consultar os itens presentes em um pedido. O id do pedido é utilizado para realizar a chamada.</p>
 
@@ -1550,7 +1536,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 </span><span class="p">]</span><span class="w">
 </span></code></pre></div></div>
 
-<h4 id="put-alterar-um-item-em-um-pedido">PUT <strong>Alterar um item em um pedido</strong></h4>
+<h4 id="put---alterar-um-item-em-um-pedido">PUT - Alterar um item em um pedido</h4>
 
 <p>Esse recurso permite alterar informações de um item de um pedido. O id do pedido e o id_item são utilizados para realizar a chamada.</p>
 
