[e56b6b59c302da7d91222f0fe61d1857b24dd3ff]: Fix Recursos, PUT

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -1239,16 +1239,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 
 <p>As possíveis alterações de status são:</p>
 <ul>
-  <li>
-    <table>
-      <tbody>
-        <tr>
-          <td>place (Liberar um pedido para pagamento</td>
-          <td>Exibir pedido na Cielo LIO)</td>
-        </tr>
-      </tbody>
-    </table>
-  </li>
+  <li>place (Liberar um pedido para pagamento, exibir pedido na Cielo LIO)</li>
   <li>pay (Alterar um pedido para pago)</li>
   <li>close (Fechar um pedido)</li>
   <li>canceled (cancelar pedido)</li>
