[1e11f201bed35f78c34a4bd304b056cd1a6f95cb]: Add Recursos, Delete

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -1604,6 +1604,74 @@ Ex.: À Vista, Parcelado, etc.</p>
 
 <p>O retorno 200 dessa operação representa sucesso na requisição.</p>
 
+<h4 id="delete---excluir-item-de-um-pedido">DELETE - Excluir Item de um pedido</h4>
+
+<p>Esse recurso é utilizado para excluir um item presente em um pedido. O id do pedido e o id_item são utilizados para realizar a chamada.</p>
+
+<blockquote>
+  <p>Somente os pedidos com status <strong>DRAFT</strong> podem ter itens alterados.</p>
+
+  <p>Endpoint:</p>
+
+  <p><strong>DELETE</strong> */orders/<id>/items/<id_item>*</id_item></id></p>
+</blockquote>
+
+<p>Dados de entrada:</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Campo</th>
+      <th>Tipo</th>
+      <th>Descrição</th>
+      <th>Obrigatório</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>id</td>
+      <td>path parameter</td>
+      <td>Identificador do pedido.</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td>id_item</td>
+      <td>path parameter</td>
+      <td>Identificador do item do pedido.</td>
+      <td>Sim</td>
+    </tr>
+  </tbody>
+</table>
+
+<p>Exemplo de requisição:</p>
+
+<blockquote>
+  <p><strong>DELETE</strong> <em>https://api.cielo.com.br/order-management/v1/orders/a9398720-9f78-4fa4-a5d4-ba54ba8009e7/items/8484df74-eca6-4850-8e4c-35653af0bd31</em></p>
+</blockquote>
+
+<p>Dados de saída:</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Campo</th>
+      <th>Tipo</th>
+      <th>Descrição</th>
+      <th>Obrigatório</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>N/A</td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+    </tr>
+  </tbody>
+</table>
+
+<p>O retorno 200 dessa operação representa sucesso na requisição.</p>
+
 <h1 id="integração-local">Integração Local</h1>
 
 <h2 id="apresentação-1">Apresentação</h2>
