[abfbd03ccc41ddb58767c904da6b3bce0aae165f]: Add SDK Android

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -1934,6 +1934,10 @@ Em ambiente de produção, uma vez que um pagamento for realizado na Cielo LIO a
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
 
+<h3 id="sdk">SDK</h3>
+
+<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png" alt="android(https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android)" /></p>
+
 <h1 id="integração-local">Integração Local</h1>
 
 <h2 id="apresentação-1">Apresentação</h2>
