[ed5f816780e17846c9296ba048bf8bd1f2e234fe]: Fix SDK Android

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -1936,7 +1936,7 @@ Em ambiente de produção, uma vez que um pagamento for realizado na Cielo LIO a
 
 <h3 id="sdk">SDK</h3>
 
-<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png" alt="android(https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android)" /></p>
+<p><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png" alt="android" /></a></p>
 
 <h1 id="integração-local">Integração Local</h1>
 
