[5ef282d6259d5bb322335ab685d62dd4000115aa]: Add SDK

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -1936,7 +1936,8 @@ Em ambiente de produção, uma vez que um pagamento for realizado na Cielo LIO a
 
 <h3 id="sdk">SDK</h3>
 
-<p><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png" alt="android" /></a></p>
+<p>|<a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png" alt="android" /></a>| <a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/03-sdk-csharp.png" alt="C#" /></a>  | <a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/04-sdk-java.png" alt="android" /></a>  |  <a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-PHP"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/07-sdk-php.png" alt="android" /></a> |
+|—|—|—|—|</p>
 
 <h1 id="integração-local">Integração Local</h1>
 
