[102ee4f959bad15fa5777e8cc0fe4c86fbae3ffd]: Fix SDK

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -1939,6 +1939,25 @@ Em ambiente de produção, uma vez que um pagamento for realizado na Cielo LIO a
 <p>|<a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png" alt="android" /></a>| <a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/03-sdk-csharp.png" alt="C#" /></a>  | <a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/04-sdk-java.png" alt="android" /></a>  |  <a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-PHP"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/07-sdk-php.png" alt="android" /></a> |
 |—|—|—|—|</p>
 
+<table>
+  <thead>
+    <tr>
+      <th style="text-align: center">Android</th>
+      <th style="text-align: center">C#</th>
+      <th style="text-align: center">Java</th>
+      <th style="text-align: right">PHP</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: center"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png" alt="android" /></a></td>
+      <td style="text-align: center"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/03-sdk-csharp.png" alt="C#" /></a></td>
+      <td style="text-align: center"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/04-sdk-java.png" alt="android" /></a></td>
+      <td style="text-align: right"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-PHP"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/07-sdk-php.png" alt="android" /></a></td>
+    </tr>
+  </tbody>
+</table>
+
 <h1 id="integração-local">Integração Local</h1>
 
 <h2 id="apresentação-1">Apresentação</h2>
