--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -1934,25 +1934,22 @@ Em ambiente de produção, uma vez que um pagamento for realizado na Cielo LIO a
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
 
-<h3 id="sdk">SDK</h3>
-
-<p>|<a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png" alt="android" /></a>| <a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/03-sdk-csharp.png" alt="C#" /></a>  | <a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/04-sdk-java.png" alt="android" /></a>  |  <a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-PHP"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/07-sdk-php.png" alt="android" /></a> |
-|—|—|—|—|</p>
+<h2 id="sdk">SDK</h2>
 
 <table>
   <thead>
     <tr>
-      <th style="text-align: center">Android</th>
-      <th style="text-align: center">C#</th>
-      <th style="text-align: center">Java</th>
+      <th style="text-align: right">Android</th>
+      <th style="text-align: right">C#</th>
+      <th style="text-align: right">Java</th>
       <th style="text-align: right">PHP</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td style="text-align: center"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png" alt="android" /></a></td>
-      <td style="text-align: center"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/03-sdk-csharp.png" alt="C#" /></a></td>
-      <td style="text-align: center"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/04-sdk-java.png" alt="android" /></a></td>
+      <td style="text-align: right"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png" alt="android" /></a></td>
+      <td style="text-align: right"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/03-sdk-csharp.png" alt="C#" /></a></td>
+      <td style="text-align: right"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/04-sdk-java.png" alt="android" /></a></td>
       <td style="text-align: right"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-PHP"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/07-sdk-php.png" alt="android" /></a></td>
     </tr>
   </tbody>
