[9dff7d14f39d722d38cd73a3133cbba3cee064cf]: Fix SDK

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -1939,18 +1939,18 @@ Em ambiente de produção, uma vez que um pagamento for realizado na Cielo LIO a
 <table>
   <thead>
     <tr>
-      <th style="text-align: right">Android</th>
-      <th style="text-align: right">C#</th>
-      <th style="text-align: right">Java</th>
-      <th style="text-align: right">PHP</th>
+      <th style="text-align: left">Android</th>
+      <th style="text-align: left">C#</th>
+      <th style="text-align: left">Java</th>
+      <th style="text-align: left">PHP</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td style="text-align: right"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png" alt="android" /></a></td>
-      <td style="text-align: right"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/03-sdk-csharp.png" alt="C#" /></a></td>
-      <td style="text-align: right"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/04-sdk-java.png" alt="android" /></a></td>
-      <td style="text-align: right"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-PHP"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/07-sdk-php.png" alt="android" /></a></td>
+      <td style="text-align: left"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png" alt="android" /></a></td>
+      <td style="text-align: left"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/03-sdk-csharp.png" alt="C#" /></a></td>
+      <td style="text-align: left"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/04-sdk-java.png" alt="android" /></a></td>
+      <td style="text-align: left"><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-PHP"><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/07-sdk-php.png" alt="android" /></a></td>
     </tr>
   </tbody>
 </table>
