--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -1955,6 +1955,16 @@ Em ambiente de produção, uma vez que um pagamento for realizado na Cielo LIO a
   </tbody>
 </table>
 
+<h2 id="teste">teste</h2>
+
+<pre><code class="language-android">// Criação das credenciais. Não se esquecer de substituir
+    // Client-Id e Access-Token por suas credenciais. 
+    
+    Credentials credentials = new Credentials("Client-Id", "Access-Token"); 
+    
+    orderManager = new OrderManager(credentials, context);
+</code></pre>
+
 <h1 id="integração-local">Integração Local</h1>
 
 <h2 id="apresentação-1">Apresentação</h2>
