[7381f60bb56c5923699e1d426186c9258cd79bed]: Corrige formatação do documento

--- a/en/index.html
+++ b/en/index.html
@@ -71,7 +71,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="/en/manual/checkout-cielo">Manual Checkout Cielo</a>
+                    <a href="/en/manual/checkout-cielo">Manual de integração</a>
                 </li>
             
             </ul>
