[c43ef5da755ed0c0998f7b8e54a889336de8929c]: Updated '_i18n/pt/_posts/webservice/2015-03-25-faq-webservice-1.5.md' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -171,7 +171,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/faq/faq-webservice-1-5">FAQ Webservice 1.5</a>
+                    <a href="https://developercielo.github.io/faq/faq-webservice-1-5">FAQ</a>
                 </li>
             
                 <li class="doc-title">
