--- a/404.html
+++ b/404.html
@@ -175,7 +175,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/webservice-1-5">Manual Webservice 1.5</a>
+                    <a href="https://developercielo.github.io/manual/webservice-1-5">Manual</a>
                 </li>
             
             </ul>
