--- a/faq/faq-webservice-1-5.html
+++ b/faq/faq-webservice-1-5.html
@@ -109,7 +109,7 @@
 
 <h2 id="como-funciona-a-solução-do-webservice-15-da-cielo">Como funciona a solução do Webservice 1.5 da Cielo?</h2>
 
-<p>A solução Webservice da plataforma Cielo E-commerce foi desenvolvida com tecnologia XML, que é padrão de mercado e independe da tecnologia utilizada por nossos clientes. Dessa forma, é possível integrar-se utilizando as mais variadas linguagens de programação, tais como: ASP, ASP. Net, Java, PHP, Ruby, Python, etc.</p>
+<p>A solução <strong>Webservice</strong> da plataforma Cielo E-commerce foi desenvolvida com tecnologia XML, que é padrão de mercado e independe da tecnologia utilizada por nossos clientes. Dessa forma, é possível integrar-se utilizando as mais variadas linguagens de programação, tais como: ASP, ASP. Net, Java, PHP, Ruby, Python, etc.</p>
 
 <h2 id="É-preciso-algum-software-proprietário-como-dlls-para-fazer-a-integração">É preciso algum software proprietário, como DLLs, para fazer a integração?</h2>
 
