[d42a421cc07b8d1eaeb5bc2bdfa8dc91bbeb0975]: Updated '_i18n/pt/_posts/credenciamento/2000-01-01-credenciamento.md' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -74,7 +74,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/credenciamento">Cielo Credenciamento</a>
+                    <a href="https://developercielo.github.io/manual/credenciamento">Manual de Integração</a>
                 </li>
             
             </ul>
