--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/webservice-1-5">Manual</a>
+                    <a href="https://developercielo.github.io/manual/webservice-1-5">Manual de Integração</a>
                 </li>
             
             </ul>
