[9a2d0d82626d047ca46eb0a4f8c45c6998ca2217]: Ajuste na caixa dos nomes dos arquivos

--- a/manual/credenciamento.html
+++ b/manual/credenciamento.html
@@ -169,13 +169,13 @@
 <p>Ambiente Produção</p>
 
 <ul>
-  <li><a href="https://api.cielo.com.br/affiliate">https://api.cielo.com.br/affiliate</a></li>
+  <li><a href="https://apicielocombr/affiliate">https://apicielocombr/affiliate</a></li>
 </ul>
 
 <p>Ambiente Sandbox</p>
 
 <ul>
-  <li><a href="https://api.cielo.com.br/sandbox/affiliate">https://api.cielo.com.br/sandbox/affiliate</a></li>
+  <li><a href="https://apicielocombr/sandbox/affiliate">https://apicielocombr/sandbox/affiliate</a></li>
 </ul>
 
 <h3 id="instruções-para-uso-realizar-chamadas-autenticação">Instruções para uso: realizar chamadas, autenticação</h3>
