[77d5ca2c053fc57812d20e42e7e3b90242393128]: Moved '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-tutoriais-copy.md' to '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-30.md' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/tutorial/tutoriais-copy">Tutoriais</a>
+                    <a href="https://developercielo.github.io/tutorial/sdks-30">Tutoriais</a>
                 </li>
             
                 <li class="doc-title">
