[0703d5b24347c9a0ae0635d4e60e87c2b7b8a56a]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-tutoriais.md' via CloudCannon

--- a/tutorial/tutoriais.html
+++ b/tutorial/tutoriais.html
@@ -109,7 +109,7 @@
   </thead>
   <tbody>
     <tr>
-      <td><a href="https://github.com/DeveloperCielo/API-3.0-Android"><strong>Android</strong></a></td>
+      <td><img src="https://github.com/DeveloperCielo/API-3.0-Android" alt="**Android**" /></td>
     </tr>
     <tr>
       <td><a href="https://github.com/DeveloperCielo/API-3.0-iOS"><strong>iOS</strong></a></td>
@@ -129,7 +129,7 @@
   </tbody>
 </table>
 
-<p><img src="https://developercielo.github.io/images/i0.png" alt="Acessando o Backoffice" /></p>
+<p><img src="https://developercielo.github.io/images/ApiCieloecommerce/SDKs/01-sdk-android.png" alt="**Android**" /></p>
 
 </div>
 
