[c90c5cc1ad7d3ed2a26a726e000489e487c5ce14]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-tutoriais.md' via CloudCannon

--- a/tutorial/tutoriais.html
+++ b/tutorial/tutoriais.html
@@ -104,16 +104,25 @@
 <table>
   <thead>
     <tr>
-      <th>SDK</th>
+      <th>Android</th>
+      <th>iOS</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <td><img src="https://github.com/DeveloperCielo/API-3.0-Android" alt="**Android**" /></td>
-    </tr>
-    <tr>
       <td><a href="https://github.com/DeveloperCielo/API-3.0-iOS"><strong>iOS</strong></a></td>
     </tr>
+  </tbody>
+</table>
+
+<table>
+  <thead>
+    <tr>
+      <th>SDK</th>
+    </tr>
+  </thead>
+  <tbody>
     <tr>
       <td><a href="https://github.com/DeveloperCielo/API-3.0-PHP"><strong>PHP</strong></a></td>
     </tr>
