[e06c553f8d1e2be7c191f93db040c34fd85abd83]: Moved '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-30.md' to '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-tutoriais-3.0.md' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -91,7 +91,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/tutorial/sdks-30">Tutoriais</a>
+                    <a href="https://developercielo.github.io/tutorial/tutoriais-3-0">Tutoriais</a>
                 </li>
             
                 <li class="doc-title">
