--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/tutorial/sdks-30">Tutoriais</a>
+                    <a href="https://developercielo.github.io/tutorial/tutoriais-3-0">Tutoriais</a>
                 </li>
             
                 <li class="doc-title">
