[6fe139a130971ec2e556f53e3a8a075d800ec585]: Moved '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-tutoriais.md' to '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/tutorial/tutoriais">SDKs</a>
+                    <a href="https://developercielo.github.io/tutorial/sdks-3-0">SDKs</a>
                 </li>
             
             </ul>
