--- a/404.html
+++ b/404.html
@@ -99,7 +99,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/tutorial/tutoriais">SDKs</a>
+                    <a href="https://developercielo.github.io/tutorial/sdks-3-0">SDKs</a>
                 </li>
             
             </ul>
