[0b948cb222cd8c971e272d4a5ad2754ab6eeafbe]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/tutorial/sdks-3-0.html
+++ b/tutorial/sdks-3-0.html
@@ -119,6 +119,21 @@
 <table>
   <thead>
     <tr>
+      <th>Android</th>
+      <th>iOS</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Android"><img src="https://developercielo.github.io/images/ApiCieloecommerce/SDKs/01-sdk-android.png" alt="Android" /></a></td>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-iOS"><strong>iOS</strong></a></td>
+    </tr>
+  </tbody>
+</table>
+
+<table>
+  <thead>
+    <tr>
       <th>SDK</th>
     </tr>
   </thead>
