[238deb3134689bdf51110b2d435457cc8607b845]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/tutorial/sdks-3-0.html
+++ b/tutorial/sdks-3-0.html
@@ -104,21 +104,6 @@
 <table>
   <thead>
     <tr>
-      <th>Android</th>
-      <th>iOS</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><a href="https://github.com/DeveloperCielo/API-3.0-Android"><img src="https://developercielo.github.io/images/ApiCieloecommerce/SDKs/01-sdk-android.png" alt="Android" /></a></td>
-      <td><a href="https://github.com/DeveloperCielo/API-3.0-iOS"><strong>iOS</strong></a></td>
-    </tr>
-  </tbody>
-</table>
-
-<table>
-  <thead>
-    <tr>
       <th>Links</th>
     </tr>
   </thead>
@@ -146,6 +131,21 @@
 <a href="https://github.com/DeveloperCielo/API-3.0-PHP"><img src="https://developercielo.github.io/images/ApiCieloecommerce/SDKs/07-sdk-php.png" alt="**PHP**" /></a> 
 <a href="https://github.com/DeveloperCielo/API-3.0-Python"><img src="https://developercielo.github.io/images/ApiCieloecommerce/SDKs/08-sdk-python.png" alt="**Python**" /></a>
 <a href="https://github.com/DeveloperCielo/API-3.0-Ruby"><img src="https://developercielo.github.io/images/ApiCieloecommerce/SDKs/09-sdk-ruby.png" alt="**Ruby**" /></a></p>
+
+<table>
+  <thead>
+    <tr>
+      <th> </th>
+      <th> </th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Java"><img src="https://developercielo.github.io/images/ApiCieloecommerce/SDKs/04-sdk-java.png" alt="**Java**" /></a></td>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Ruby"><img src="https://developercielo.github.io/images/ApiCieloecommerce/SDKs/09-sdk-ruby.png" alt="**Ruby**" /></a></td>
+    </tr>
+  </tbody>
+</table>
 
 <h1 id="sdks-cielo-lio">SDKs Cielo LIO</h1>
 
