[adaf2609f6120e261037fea39822d927aae00acc]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/tutorial/sdks-3-0.html
+++ b/tutorial/sdks-3-0.html
@@ -144,6 +144,10 @@
       <td><a href="https://github.com/DeveloperCielo/API-3.0-Java"><img src="https://developercielo.github.io/images/SDKs/04-sdk-java.png" alt="**Java**" /></a></td>
       <td><a href="https://github.com/DeveloperCielo/API-3.0-Ruby"><img src="https://developercielo.github.io/images/SDKs/09-sdk-ruby.png" alt="**Ruby**" /></a></td>
     </tr>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Java"><img src="https://developercielo.github.io/images/SDKs/04-sdk-java.png" alt="**Java**" /></a></td>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Ruby"><img src="https://developercielo.github.io/images/SDKs/09-sdk-ruby.png" alt="**Ruby**" /></a></td>
+    </tr>
   </tbody>
 </table>
 
