[99bf4a2972a13a1b5a4cef08dc7c3b655951359c]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/tutorial/sdks-3-0.html
+++ b/tutorial/sdks-3-0.html
@@ -101,32 +101,8 @@
 
 <p>A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório oficial CIELO:</p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Links</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><a href="https://github.com/DeveloperCielo/API-3.0-PHP"><strong>PHP</strong></a></td>
-    </tr>
-    <tr>
-      <td><a href="https://github.com/DeveloperCielo/API-3.0-Java"><strong>JAVA</strong></a></td>
-    </tr>
-    <tr>
-      <td><a href="https://github.com/DeveloperCielo/API-3.0-Python"><strong>Python</strong></a></td>
-    </tr>
-    <tr>
-      <td><a href="https://github.com/DeveloperCielo/API-3.0-Ruby"><strong>Ruby</strong></a></td>
-    </tr>
-    <tr>
-      <td><a href="https://github.com/DeveloperCielo/API-3.0-iOS"><strong>iOS</strong></a></td>
-    </tr>
-  </tbody>
-</table>
-
-<p><a href="https://github.com/DeveloperCielo/API-3.0-Android"><img src="https://developercielo.github.io/images/SDKs/01-sdk-android.png" alt="**Android**" /></a>
+<p><a href="https://github.com/DeveloperCielo/API-3.0-Android"><img src="https://developercielo.github.io/images/SDKs/01-sdk-android.png" alt="**iOS**" /></a>
+<a href="https://github.com/DeveloperCielo/API-3.0-Android"><img src="https://developercielo.github.io/images/SDKs/01-sdk-android.png" alt="**Android**" /></a>
 <a href="https://github.com/DeveloperCielo/API-3.0-Java"><img src="https://developercielo.github.io/images/SDKs/04-sdk-java.png" alt="**Java**" /></a>
 <a href="https://github.com/DeveloperCielo/API-3.0-PHP"><img src="https://developercielo.github.io/images/SDKs/07-sdk-php.png" alt="**PHP**" /></a> 
 <a href="https://github.com/DeveloperCielo/API-3.0-Python"><img src="https://developercielo.github.io/images/SDKs/08-sdk-python.png" alt="**Python**" /></a>
@@ -153,7 +129,68 @@
 
 <h1 id="sdks-cielo-lio">SDKs Cielo LIO</h1>
 
+<table>
+  <thead>
+    <tr>
+      <th>Tipo</th>
+      <th>SDK</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Sample</td>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Android"><strong>Integração Local</strong></a></td>
+    </tr>
+    <tr>
+      <td><strong>Android</strong></td>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-iOS"><strong>Integração Remota</strong></a></td>
+    </tr>
+    <tr>
+      <td><strong>PHP</strong></td>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-PHP"><strong>Integração Remota</strong></a></td>
+    </tr>
+    <tr>
+      <td><strong>Java</strong></td>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Java"><strong>Integração Remota</strong></a></td>
+    </tr>
+    <tr>
+      <td><strong>CSharp</strong></td>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Python"><strong>Integração Remota</strong></a></td>
+    </tr>
+  </tbody>
+</table>
+
 <h1 id="sdks-webservice-15">SDKs Webservice 1.5</h1>
+
+<h1 id="base">base</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>SDK</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Android"><strong>Android</strong></a></td>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-iOS"><strong>iOS</strong></a></td>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-PHP"><strong>PHP</strong></a></td>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Java"><strong>JAVA</strong></a></td>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Python"><strong>Python</strong></a></td>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Ruby"><strong>Ruby</strong></a></td>
+    </tr>
+  </tbody>
+</table>
 
 </div>
 
