[d2b6f354709eef9e4694f520d66e8e181168466e]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/tutorial/sdks-3-0.html
+++ b/tutorial/sdks-3-0.html
@@ -101,7 +101,7 @@
 
 <p>A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório oficial CIELO:</p>
 
-<p><a href="https://github.com/DeveloperCielo/API-3.0-Android"><img src="https://developercielo.github.io/images/SDKs/01-sdk-android.png" alt="**iOS**" /></a>
+<p><a href="https://github.com/DeveloperCielo/API-3.0-iOS"><img src="https://developercielo.github.io/images/SDKs/01-sdk-ios" alt="**iOS**" /></a>
 <a href="https://github.com/DeveloperCielo/API-3.0-Android"><img src="https://developercielo.github.io/images/SDKs/01-sdk-android.png" alt="**Android**" /></a>
 <a href="https://github.com/DeveloperCielo/API-3.0-Java"><img src="https://developercielo.github.io/images/SDKs/04-sdk-java.png" alt="**Java**" /></a>
 <a href="https://github.com/DeveloperCielo/API-3.0-PHP"><img src="https://developercielo.github.io/images/SDKs/07-sdk-php.png" alt="**PHP**" /></a> 
@@ -138,24 +138,28 @@
   </thead>
   <tbody>
     <tr>
-      <td>Sample</td>
-      <td><a href="https://github.com/DeveloperCielo/API-3.0-Android"><strong>Integração Local</strong></a></td>
+      <td><strong>Sample</strong></td>
+      <td><a href="https://github.com/DeveloperCielo/LIO-SDK-Sample-Integracao-Local"><strong>Integração Local</strong></a></td>
+    </tr>
+    <tr>
+      <td><strong>Order Management</strong></td>
+      <td><a href="https://github.com/DeveloperCielo/order-management"><strong>Integração Local</strong></a></td>
     </tr>
     <tr>
       <td><strong>Android</strong></td>
-      <td><a href="https://github.com/DeveloperCielo/API-3.0-iOS"><strong>Integração Remota</strong></a></td>
+      <td><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android"><strong>Integração Remota</strong></a></td>
     </tr>
     <tr>
       <td><strong>PHP</strong></td>
-      <td><a href="https://github.com/DeveloperCielo/API-3.0-PHP"><strong>Integração Remota</strong></a></td>
+      <td><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-PHP"><strong>Integração Remota</strong></a></td>
     </tr>
     <tr>
       <td><strong>Java</strong></td>
-      <td><a href="https://github.com/DeveloperCielo/API-3.0-Java"><strong>Integração Remota</strong></a></td>
+      <td><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java"><strong>Integração Remota</strong></a></td>
     </tr>
     <tr>
       <td><strong>CSharp</strong></td>
-      <td><a href="https://github.com/DeveloperCielo/API-3.0-Python"><strong>Integração Remota</strong></a></td>
+      <td><a href="https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP"><strong>Integração Remota</strong></a></td>
     </tr>
   </tbody>
 </table>
