--- a/tutorial/sdks-3-0.html
+++ b/tutorial/sdks-3-0.html
@@ -212,6 +212,19 @@
     <tr>
       <th>1</th>
       <th>2</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-iOS"><img src="https://developercielo.github.io/images/SDKs/01-sdk-ios.png" alt="**iOS**" /></a></td>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Android"><img src="https://developercielo.github.io/images/SDKs/01-sdk-android.png" alt="**Android**" /></a></td>
+    </tr>
+  </tbody>
+</table>
+
+<table>
+  <thead>
+    <tr>
       <th>3</th>
       <th>4</th>
       <th>5</th>
@@ -220,8 +233,6 @@
   </thead>
   <tbody>
     <tr>
-      <td><a href="https://github.com/DeveloperCielo/API-3.0-iOS"><img src="https://developercielo.github.io/images/SDKs/01-sdk-ios" alt="**iOS**" /></a></td>
-      <td><a href="https://github.com/DeveloperCielo/API-3.0-Android"><img src="https://developercielo.github.io/images/SDKs/01-sdk-android.png" alt="**Android**" /></a></td>
       <td><a href="https://github.com/DeveloperCielo/API-3.0-Java"><img src="https://developercielo.github.io/images/SDKs/04-sdk-java.png" alt="**Java**" /></a></td>
       <td><a href="https://github.com/DeveloperCielo/API-3.0-PHP"><img src="https://developercielo.github.io/images/SDKs/07-sdk-php.png" alt="**PHP**" /></a></td>
       <td><a href="https://github.com/DeveloperCielo/API-3.0-Python"><img src="https://developercielo.github.io/images/SDKs/08-sdk-python.png" alt="**Python**" /></a></td>
@@ -232,13 +243,11 @@
       <td> </td>
       <td> </td>
       <td> </td>
-      <td> </td>
-      <td> </td>
     </tr>
   </tbody>
 </table>
 
-<p><a href="https://github.com/DeveloperCielo/API-3.0-iOS"><img src="https://developercielo.github.io/images/SDKs/01-sdk-ios" alt="**iOS**" /></a>
+<p><a href="https://github.com/DeveloperCielo/API-3.0-iOS"><img src="https://developercielo.github.io/images/SDKs/01-sdk-ios.png" alt="**iOS**" /></a>
 <a href="https://github.com/DeveloperCielo/API-3.0-Android"><img src="https://developercielo.github.io/images/SDKs/01-sdk-android.png" alt="**Android**" /></a>
 <a href="https://github.com/DeveloperCielo/API-3.0-Java"><img src="https://developercielo.github.io/images/SDKs/04-sdk-java.png" alt="**Java**" /></a>
 <a href="https://github.com/DeveloperCielo/API-3.0-PHP"><img src="https://developercielo.github.io/images/SDKs/07-sdk-php.png" alt="**PHP**" /></a> 
