--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/tutorial/sdks-3-0">SDKs</a>
+                    <a href="https://developercielo.github.io/tutorial/sdks-cielo">SDKs Cielo</a>
                 </li>
             
             </ul>
